<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile"
    android:background="@drawable/gradient2"
    >


    <de.hdodenhof.circleimageview.CircleImageView


        android:id="@+id/profilepic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/profile_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@mipmap/ic_launcher_round">


    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepic"
        app:layout_constraintVertical_bias="0.043" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemIconTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/nav_items"
        tools:layout_editor_absoluteX="20dp" />


    <Button
        android:id="@+id/contact"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/curve4"
        android:text="@string/contact_developer_1"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/contact2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contact3"
        app:layout_constraintTop_toBottomOf="@+id/contact3"
        app:layout_constraintVertical_bias="0.375">


    </Button>

    <Button
        android:id="@+id/contact2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/curve4"
        android:text="@string/contact_developer_2"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/contact4"
        app:layout_constraintTop_toBottomOf="@+id/contact4"
        app:layout_constraintVertical_bias="0.375">


    </Button>

    <Button
        android:id="@+id/contact3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/curve4"
        android:text="@string/contact_for_selling_your_car"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/contact4"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593">


    </Button>

    <Button
        android:id="@+id/contact4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/curve4"
        android:text="@string/contact_for_selling_your_car2"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511">


    </Button>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0_by_sas_developers"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:layout_constraintVertical_bias="0.975" />


</androidx.constraintlayout.widget.ConstraintLayout>