<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".Sign_up"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/alice"
        android:text="@string/createaccount"
        android:textColor="#100F0F"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/curve1"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="326dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:hint="@string/email"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="bold"
                android:id="@+id/email"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="326dp"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="326dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:hint="@string/confirmpassword"
                android:id="@+id/confirmpassword"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/curve2"
            android:fontFamily="@font/alice"
            android:text="@string/sign_up"
            android:textColor="#ffff"


            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>