<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="@drawable/gradient1"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/curve1"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:fontFamily="@font/alice"
            android:text="@string/login"
            android:textColor="#100F0F"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="326dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:hint="@string/email"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="bold"
                android:id="@+id/email"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="326dp"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/curve2"
            android:fontFamily="@font/alice"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/curve2"
            android:fontFamily="@font/alice"
            android:text="@string/createaccount"
            android:textColor="#ffff"
            android:textSize="13sp"
            android:textStyle="bold" />



        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="10dp"
            android:id="@+id/signin"

            >


        </com.google.android.gms.common.SignInButton>


    </LinearLayout>
    <ProgressBar
        android:id="@+id/progessbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        >

    </ProgressBar>


</androidx.appcompat.widget.LinearLayoutCompat>
